--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 clap = { version ="^4.4.8", features = ["derive"]}
 clio = "0.3.4"
+crossterm = "0.27.0"
 rand = "0.8.5"
+ratatui = "0.26.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.108"
