--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ rand = "0.8.5"
 ratatui = "0.26.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.108"
+serde_yaml = "0.9.34"
