--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ ratatui = { version = "0.28.0", features = ["unstable-widget-ref"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.108"
 serde_yaml = "0.9.34"
+toml = "0.8.19"
